2.14.4
 - enh: avoid creating hierarchy when no filters are applied (speed)
2.14.3
 - fix: intermediate plotting of first event whenever a slot is added
 - fix: catch zero-division warning when plotting empty image
 - enh: remember selected events in QuickView
 - enh: avoid showing first dataset event when user clicks in QuickView
 - setup: bump dclab from 0.55.7 to 0.56.3 (enhanced basin support)
2.14.2
 - setup: bump dclab from 0.55.6 to 0.55.7
2.14.1
 - fix: perform sanity check for contour spacing before plotting
 - fix: use pyqtgraph.SpinBox to edit box filters (#149)
 - enh: minor optimization of min/max feature algorithm
 - enh: only preselect innate features when computing statistics (#150)
 - setup: bump dclab to 0.55.6 (new scalar features, dcor access)
 - setup: bump pyqtgraph from 0.12.4 to 0.13.3
2.14.0
 - ref: don't set RTDCBase.identifier to slot identifier
 - setup: drop support for Python 3.8
 - setup: bump dclab from 0.54.2 to 0.55.4 (better DCOR support)
 - build: use Python 3.10 for building executables
2.13.7
 - ci: fix rtd build pipeline
 - setup: bump dclab from 0.52.0 to 0.54.2 (improved basin support)
2.13.6
 - ci: fix Windows build pipeline
2.13.5
 - setup: bump requests to 2.31.0 (CVE-2023-32681)
 - setup: bump scipy to 1.10.0 (CVE-2023-25399)
 - setup: bump dclab from 0.50.4 to 0.52.0
2.13.4
 - tests: fix fake dataset creation
2.13.3
 - fix: casting error when using integer feature for plot color
 - fix: also export logs and tables to .rtdc with prefix "so2exp_"
 - enh: minor minimization in waiting times
 - ref: unify json dumps when saving sessions
 - setup: bump dclab from 0.48.4 to 0.50.4
2.13.2
 - docs: don't build PDF on rtd (failed)
 - setup: bump dclab from 0.48.2 to 0.48.4 (don't load invalid
   inertia ratio data from existing HDF5 files)
2.13.1
 - setup: bump dclab from 0.48.1 to 0.48.2 (improved speed, fixed
   bug with inertia ratio in long channels)
2.13.0
 - feat: support new viscosity model buyukurganci-2022 (#136)