@@ -1,5 +1,6 @@
 2.14.4
  - enh: avoid creating hierarchy when no filters are applied (speed)
+ - enh: cache computed statistics
 2.14.3
  - fix: intermediate plotting of first event whenever a slot is added
  - fix: catch zero-division warning when plotting empty image
